tests/fail/not_ended_string.tig
let
    var s := "This is an invalid id for var declaration
in
end
